--- a/signup.html
+++ b/signup.html
@@ -21,18 +21,25 @@
     </header>
     <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="signup.html">Criar Conta</a>
+            <a href="#">Criar Conta</a>
             <a href="#">Contato</a>
     </div>
     <section>
         <nav class="navform">
                 <form>
                     <div>
-                        <h1 style="font-size:20pt;">Faça login</h1>
+                        <h1 style="font-size:20pt;">Criar conta</h1>
+                    </div>
+                    <div>
+                        <label for="nome" class="form-label">Nome completo</label>
+                        <input type="text" class="form-control" id="text">
+                    </div>
+                    <div>
+                        <label for="date" class="form-label">Data</label>
+                        <input type="date" class="form-control" id="date" aria-describedby="emailHelp">
                     </div>
                     <div>
                         <label for="login" class="form-label">Usuário</label>
-                        <input type="email" class="form-control" id="login" aria-describedby="emailHelp">
                     </div>
                     <div>
                         <label for="senha" class="form-label">Senha</label>
